[package]
name = "lazy_crafter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
env_logger = "0.9.1"
rdev = "0.5.1"
x11-clipboard = "0.7.0"
derivative = "2.2.0"
chrono = "0.4.19"
serde_json = "1.0.85"
serde = { version = "1.0", features = ["derive"] }
strum = "0.24.1"
strum_macros = "0.24.3"
regex = "1.6.0"

egui = "0.19.0"
eframe = "0.19.0"
egui_extras = "0.19.0"
[target.'cfg(windows)'.dependencies]
clipboard-win = "4.4.2"