[package]
name = "lazy_crafter"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
env_logger = "0.10.0"
rdev = "0.5.2"
x11-clipboard = "0.7.0"
derivative = "2.2.0"
chrono = "0.4.23"
serde_json = "1.0.89"
serde = { version = "1.0", features = ["derive"] }
strum = "0.24.1"
strum_macros = "0.24.3"
regex = "1.7.0"
itertools = "0.10.5"

egui = "0.20.1"
eframe = "0.20.1"
egui_extras = "0.20.0"

[target.'cfg(windows)'.dependencies]
clipboard-win = "4.4.2"

[dev-dependencies]
rstest = "0.16.0"