[package]
name = "lazy_crafter"
version = "0.4.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.19"
env_logger = "0.10.0"
rdev = "0.5.3"
x11-clipboard = "0.8.1"
derivative = "2.2.0"
chrono = "0.4.26"
serde_json = "1.0.104"
serde = { version = "1.0", features = ["derive"] }
strum = "0.25.0"
strum_macros = "0.25.2"
regex = "1.9.3"
itertools = "0.11.0"
anyhow = "1.0.72"

egui = "0.22.0"
eframe = "0.22.0"
egui_extras = "0.22.0"

[target.'cfg(windows)'.dependencies]
clipboard-win = "4.5.0"

[dev-dependencies]
rstest = "0.18.1"